# plugin

./: .gitignore  Makefile
docker/: Dockerfile  README.md
plugin/dapp/init/: init.go
plugin/dapp/paracross/executor/: kv.go
plugin/dapp/wasm/: plugin.go
plugin/dapp/wasm/commands/: transfer_withdraw.md  wasm.go  wasm_cgo.go
plugin/dapp/wasm/executor/: exec.go  exec_del_local.go  exec_local.go  query.go  wasm.go
plugin/dapp/wasm/executor/common/: config.go  contract.go  kv.go  log.go
plugin/dapp/wasm/executor/state/: account.go  context.go  interface.go  snapshot.go  statedb.go
plugin/dapp/wasm/executor/wasmcpp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  build_wasmcpp.sh  cmake_install.cmake  compile_commands.json  eosio.version.hpp  genMakeFile.sh  simpleBuild.sh  simpleBuild2.sh
plugin/dapp/wasm/executor/wasmcpp/adapter/: CMakeLists.txt  CTestTestfile.cmake  Makefile  abi_serializer.cpp  apply_context.cpp  callback2Go.cpp  cmake_install.cmake  wasm_eosio_binary_ops.cpp  wasm_eosio_injection.cpp  wasm_interface.cpp  wasm_interface_adapter.cpp
plugin/dapp/wasm/executor/wasmcpp/adapter/include/eosio/chain/: _cgo_export.h  abi_serializer.hpp  account_object.hpp  action.hpp  apply_context.hpp  callback2Go.h  exceptions.hpp  name.hpp  producer_schedule.hpp  types.hpp  types_fixerror.hpp  wasm_eosio_binary_ops.hpp  wasm_eosio_injection.hpp  wasm_eosio_validation.hpp  wasm_interface.hpp  wasm_interface_adapter.h  wasm_interface_private.hpp
plugin/dapp/wasm/executor/wasmcpp/adapter/include/eosio/chain/webassembly/: binaryen.hpp  wavm.hpp
plugin/dapp/wasm/executor/wasmcpp/adapter/webassembly/: binaryen.cpp  wavm.cpp
plugin/dapp/wasm/executor/wasmcpp/builtins/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/chainbase/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/contracts/dbwr/: dbwr.cpp  dbwr.s  dbwr.wasm  dbwr.wast
plugin/dapp/wasm/executor/wasmcpp/contracts/eosio.dice/: dice.abi  dice.cpp  dice.hpp  dice.s  dice.wasm  dice.wast
plugin/dapp/wasm/executor/wasmcpp/contracts/eosio.token/: eosio.token.abi
plugin/dapp/wasm/executor/wasmcpp/contracts/eosio.tokenv2/: token.abi  token.cpp  token.h  token.hpp  token.s  token.wasm  token.wast
plugin/dapp/wasm/executor/wasmcpp/contracts/eosiolib/: db4chain33.h  db_operation.hpp  system.h  types.h
plugin/dapp/wasm/executor/wasmcpp/contracts/hellodb/: hellodb.cpp  hellodb.s  hellodb.wasm  hellodb.wast
plugin/dapp/wasm/executor/wasmcpp/contracts/tools/: cpp2wasm  testdir
plugin/dapp/wasm/executor/wasmcpp/fc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/fc/src/: exception.cpp
plugin/dapp/wasm/executor/wasmcpp/fc/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/lib/: README  updateLibs.sh
plugin/dapp/wasm/executor/wasmcpp/serialize/: CMakeLists.txt  CTestTestfile.cmake  Makefile  action.h  action.hpp  cmake_install.cmake  datastream.hpp  db4chain33.h  db_operation.hpp  eosio.hpp  fixed_key.hpp  memory.h  memory.hpp  multi_index.hpp  print.hpp  serialize_api.cpp  serialize_api.h  system.cpp  system.h  token.cpp  token.h  token.hpp  vector.hpp
plugin/dapp/wasm/executor/wasmcpp/serialize/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  test_serialize
plugin/dapp/wasm/executor/wasmcpp/softfloat/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/testadapter/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
plugin/dapp/wasm/executor/wasmcpp/wasm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/wasm-jit/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
plugin/dapp/wasm/executor/wasmcpp/wasm/binaryen/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dummy  temp.txt
plugin/dapp/wasm/proto/: wasm.proto
plugin/dapp/wasm/rpc/: rpc.go  types.go
plugin/dapp/wasm/types/: const.go  errors.go  tx.go  wasm.go  wasm.pb.go
(+69 files in other folders)
